--- a/QuestionnaireWeb/package.json
+++ b/QuestionnaireWeb/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
     "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^6.0.0-beta.16",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
     "@angular/material": "^5.2.0",
@@ -25,6 +26,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
