add code first code .

--- a/QuestionnaireWebApi/appsettings.json
+++ b/QuestionnaireWebApi/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "QuestionnaireContext": "Server=(localdb)\\mssqllocaldb;Database=QuestionnaireDB_Local;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
